# test_task_career_centr

./: .gitignore  README.md  docker-compose.yaml  manage.py  pyproject.toml
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_alter_user_is_active.py
electronics_retail/: asgi.py  settings.py  urls.py  wsgi.py
sales_network/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
sales_network/migrations/: 0001_initial.py  0002_alter_unit_product.py  0003_alter_contact_options_alter_product_options_and_more.py  0004_alter_unit_product.py
